update: check_clarity.py

--- a/Image/Basic/script/dataset/readme
+++ b/Image/Basic/script/dataset/readme
@@ -1,4 +1,16 @@
-check_jpeg.py 检测 jpeg 格式数据完整性（需手动删除不完整数据）
-data_train_test_split.py 训练验证测试集划分
-statistic_xml_classname.py 统计每个数据集的类别
-select_xml_classname.py 每个数据集挑选合适的类别用于训练
+# dataset_check
+dataset_check/check_jpeg.py 检测 jpeg 格式数据完整性（需手动删除不完整数据）
+dataset_check/check_clarity.py 检测图像清晰度
+
+# dataset_train_test_split
+dataset_train_test_split/data_train_test_split.py 训练验证测试集划分
+
+# dataset_static
+dataset_static/statistic_xml_classname.py 统计每个数据集的类别
+dataset_static/select_xml_classname.py 每个数据集挑选合适的类别用于训练
+
+# dataset_format
+dataset_format/bmp_to_jpg.py 数据格式转换
+
+# dataset_crop
+dataset_crop/crop_image.py 图像裁剪
